--- a/numpy_neural/test2.ipynb
+++ b/numpy_neural/test2.ipynb
@@ -1341,41 +1341,39 @@
     "\n",
     "# Load hyperparameters for the IRIS dataset\n",
     "hp = hyperparams(ConfigEnum.IRIS)\n",
-    "hp.input_size = 1  # One feature (Sepal Length)\n",
-    "hp.output_size = 1  # One target (Petal Length)\n",
+    "hp.input_size = 1  \n",
+    "hp.output_size = 1  \n",
     "hp.batch_size = batch_size\n",
     "hp.ds_train = train_dataset\n",
-    "hp.ds_val = test_dataset  # No validation set for simplicity\n",
+    "hp.ds_val = test_dataset  \n",
     "hp.ds_test = test_dataset\n",
     "hp.validate_every_no_of_batches = 10\n",
     "hp.epochs = 1000\n",
     "hp.lr = 0.001\n",
     "hp.has_dropout = False\n",
-    "hp.hidden_shapes = [10]  # Define some hidden layers if needed\n",
+    "hp.hidden_shapes = [10]  \n",
     "\n",
-    "# MSE Loss and Gradient Functions\n",
+    "\n",
     "def mse_loss(y_true, y_pred):\n",
     "    return np.mean(np.square(y_true - y_pred))\n",
     "\n",
     "def mse_loss_grad(y_true, y_pred):\n",
     "    return -2 * (y_true - y_pred) / y_true.size\n",
     "\n",
-    "# Initialize the model\n",
+    "\n",
     "nn = model(hp.input_size, hp.output_size, hp.hidden_shapes, tanh, tanh_grad, has_dropout=hp.has_dropout, dropout_perc=hp.dropout_perc)\n",
-    "nn.output_activation = lambda x: x  # Identity function\n",
-    "nn.output_activation_grad = lambda x: 1  # Derivative of identity is 1\n",
+    "nn.output_activation = lambda x: x  \n",
+    "nn.output_activation_grad = lambda x: 1  \n",
     "nn.loss = mse_loss\n",
     "nn.loss_grad = mse_loss_grad\n",
     "\n",
-    "# Historians and logger\n",
+    "\n",
     "val_hist = historian()\n",
     "train_hist = historian()\n",
     "logger = nnlogger(hp.output_log, (\"Epoch\", \"Phase\", \"Iteration\", \"Loss\"))\n",
     "\n",
-    "# Train the model using the provided train function\n",
     "train(nn, hp, val_hist, train_hist, logger)\n",
     "\n",
-    "# Wrapper for making predictions without calculating loss\n",
     "def predict(nn, X, y):\n",
     "    outputs = []\n",
     "    # for pair in zip(X, y):\n",
@@ -1385,28 +1383,19 @@
     "    outputs.append(o[0])\n",
     "    return np.array(outputs).flatten()\n",
     "\n",
-    "# Test the model using the provided test function and calculate MSE\n",
     "def test_model(nn, X_test, y_test):\n",
     "    y_pred = predict(nn, X_test, y_test)\n",
     "    mse = mse_loss(y_test, y_pred)\n",
     "    print(f\"Test MSE: {mse}\")\n",
     "    return y_pred\n",
     "\n",
-    "# Test the model\n",
+    "\n",
     "y_test_pred = test_model(nn, X_test, y_test)\n",
-    "\n",
-    "# Plot results\n",
     "nnplotter.view(val_hist, train_hist)\n",
-    "\n",
-    "# Close logger\n",
     "logger.close()\n",
     "\n",
-    "# Function to plot the linear regression line\n",
     "def plot_regression_line(nn, X_train, y_train, X_test, y_test, y_test_pred):\n",
-    "    # Predict outputs for train sets\n",
     "    y_train_pred = predict(nn, X_train, y_train)\n",
-    "    \n",
-    "    # Plot training data and regression line\n",
     "    plt.figure(figsize=(10, 6))\n",
     "    plt.scatter(X_train, y_train, color='blue', label='Training Data')\n",
     "    plt.scatter(X_test, y_test, color='green', label='Test Data')\n",
@@ -1418,14 +1407,11 @@
     "    plt.legend()\n",
     "    plt.show()\n",
     "\n",
-    "# Extract training and test data from the dataset class instances\n",
+    "\n",
     "X_train = train_dataset.compl_x\n",
     "y_train = train_dataset.compl_y\n",
     "X_test = test_dataset.compl_x\n",
     "y_test = test_dataset.compl_y\n",
-    "\n",
-    "\n",
-    "# Plot the regression line\n",
     "plot_regression_line(nn, X_train, y_train, X_test, y_test, y_test_pred)"
    ]
   }
