agregar nombres de estudiantes

--- a/numpy_neural/regresion.ipynb
+++ b/numpy_neural/regresion.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Esteban Castañeda Blanco C01795\n",
+    "\n",
+    "Israel López Vallecillo C04396\n",
+    "\n",
+    "Daniel Lizano Morales C04285\n",
+    "\n",
+    "Ariel Solís Monge B97664"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
